config/baseline-cm.yaml
apiVersion: v1
data:
  config.yaml: |-
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 9080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    generate_request_id: false
                    codec_type: AUTO
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: service
                          domains:
                            - "*"
                    http_filters:
                      - name: dynamic-delay
                        typed_config:
                          "@type": type.googleapis.com/nighthawk.server.ResponseOptions
                      - name: test-server # before envoy.router because order matters!
                        typed_config:
                          "@type": type.googleapis.com/nighthawk.server.ResponseOptions
                          response_body_size: 10
                          v3_response_headers:
                            - { header: { key: "foo", value: "bar" } }
                            - {
                                header: { key: "foo", value: "bar2" },
                                append: true,
                              }
                            - { header: { key: "x-nh", value: "1" } }
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          dynamic_stats: false
    admin:
      access_log_path: /tmp/envoy.log
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9081
kind: ConfigMap
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"config.yaml":"static_resources:\n  listeners:\n    - address:\n        socket_address:\n          address: 0.0.0.0\n          port_value: 9080\n      filter_chains:\n        - filters:\n            - name: envoy.filters.network.http_connection_manager\n              typed_config:\n                \"@type\": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager\n                generate_request_id: false\n           [...]
  creationTimestamp: "2024-05-30T22:49:09Z"
  name: server-config
  namespace: default
  resourceVersion: "902189"
  uid: 7290d053-504c-4654-814a-1138b82d2c83
