config/baseline-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"baseline","version":"v1"},"name":"baseline-v1","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"baseline","version":"v1"}},"template":{"metadata":{"labels":{"app":"baseline","version":"v1"}},"spec":{"affinity":{"nodeAffinity":{"requiredDuringSchedulingIgnoredDuringExecution":{"nodeSelectorTerms":[{"matchExpressions":[{"key":"app","operator":"NotIn","values":["workload"]}]} [...]
  creationTimestamp: "2024-05-30T22:49:10Z"
  generation: 3
  labels:
    app: baseline
    version: v1
  name: baseline-v1
  namespace: default
  resourceVersion: "902191"
  uid: 50c8a9b1-a872-49d3-a138-d29a0ae8863f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: baseline
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: baseline
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: NotIn
                values:
                - workload
      containers:
      - command:
        - nighthawk_test_server
        - -c
        - /tmp/config/config.yaml
        image: envoyproxy/nighthawk-dev:latest
        imagePullPolicy: IfNotPresent
        name: baseline
        ports:
        - containerPort: 9080
          protocol: TCP
        resources: {}
        securityContext:
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp/config
          name: config-volume
        - mountPath: /tmp
          name: tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: baseline
      serviceAccountName: baseline
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: server-config
        name: config-volume
      - emptyDir: {}
        name: tmp
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-05-30T22:49:14Z"
    lastUpdateTime: "2024-05-30T22:49:14Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-05-30T22:49:10Z"
    lastUpdateTime: "2024-06-03T17:17:23Z"
    message: ReplicaSet "baseline-v1-78b945dd65" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
