config/baseline-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    istio.io/use-waypoint: static-waypoint
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"baseline","service":"baseline"},"name":"baseline","namespace":"default"},"spec":{"ports":[{"name":"http","port":9080}],"selector":{"app":"baseline"}}}
  creationTimestamp: "2024-05-30T22:49:09Z"
  labels:
    app: baseline
    istio.io/use-waypoint: static-waypoint
    service: baseline
  name: baseline
  namespace: default
  resourceVersion: "1296438"
  uid: 26e421cc-3f6c-4305-bea8-c7f07d636117
spec:
  clusterIP: 10.100.218.150
  clusterIPs:
  - 10.100.218.150
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: baseline
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
