config/httpbin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"httpbin","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"httpbin","version":"v1"}},"template":{"metadata":{"labels":{"app":"httpbin","version":"v1"}},"spec":{"containers":[{"command":["gunicorn","-b","0.0.0.0:8080","httpbin:app","-k","gevent"],"env":[{"name":"WORKON_HOME","value":"/tmp"}],"image":"docker.io/kong/httpbin","imagePullPolicy":"IfNotPresent","name":"httpbin","ports":[{ [...]
  creationTimestamp: "2024-06-04T17:25:01Z"
  generation: 1
  name: httpbin
  namespace: default
  resourceVersion: "1181826"
  uid: 5a29a282-0855-4184-bebe-97f27f964e43
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: httpbin
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
      - command:
        - gunicorn
        - -b
        - 0.0.0.0:8080
        - httpbin:app
        - -k
        - gevent
        env:
        - name: WORKON_HOME
          value: /tmp
        image: docker.io/kong/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: httpbin
      serviceAccountName: httpbin
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-06-04T17:25:08Z"
    lastUpdateTime: "2024-06-04T17:25:08Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-06-04T17:25:01Z"
    lastUpdateTime: "2024-06-04T17:25:08Z"
    message: ReplicaSet "httpbin-5c779fc757" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
