config/httpbin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    istio.io/use-waypoint: static-waypoint
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"istio.io/use-waypoint":"static-waypoint"},"labels":{"app":"httpbin","service":"httpbin"},"name":"httpbin","namespace":"default"},"spec":{"clusterIP":"10.100.127.1","ports":[{"name":"http","port":8000,"targetPort":8080}],"selector":{"app":"httpbin"}}}
  creationTimestamp: "2024-06-04T17:25:00Z"
  labels:
    app: httpbin
    istio.io/use-waypoint: static-waypoint
    service: httpbin
  name: httpbin
  namespace: default
  resourceVersion: "1307048"
  uid: 2fcdfb0a-f3af-4571-997e-72096d33be80
spec:
  clusterIP: 10.100.127.1
  clusterIPs:
  - 10.100.127.1
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpbin
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
