config/load-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"workload","version":"v1"},"name":"load-v1","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"workload","version":"v1"}},"template":{"metadata":{"labels":{"app":"workload","version":"v1"}},"spec":{"affinity":{"nodeAffinity":{"requiredDuringSchedulingIgnoredDuringExecution":{"nodeSelectorTerms":[{"matchExpressions":[{"key":"app","operator":"In","values":["workload"]}]}]}}},"c [...]
  creationTimestamp: "2024-05-30T22:49:10Z"
  generation: 6
  labels:
    app: workload
    version: v1
  name: load-v1
  namespace: default
  resourceVersion: "907852"
  uid: 385a9480-f4e9-449b-9d99-8f9575b2f9ad
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: workload
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: workload
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - workload
      containers:
      - command:
        - /bin/ash
        - -c
        - sleep 10000000
        image: envoyproxy/nighthawk-dev:latest
        imagePullPolicy: IfNotPresent
        name: benchmark
        resources: {}
        securityContext:
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: load
      serviceAccountName: load
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-05-30T22:49:15Z"
    lastUpdateTime: "2024-05-30T22:49:15Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-05-30T22:49:10Z"
    lastUpdateTime: "2024-06-03T17:51:42Z"
    message: ReplicaSet "load-v1-7966dcd47" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
