config/load-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    istio.io/use-waypoint: static-waypoint
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"workload","istio.io/use-waypoint":"static-waypoint","service":"load","version":"v1"},"name":"load","namespace":"default"},"spec":{"ports":[{"name":"http","port":9080}],"selector":{"app":"workload","version":"v1"}}}
  creationTimestamp: "2024-06-04T21:13:10Z"
  labels:
    app: workload
    istio.io/use-waypoint: static-waypoint
    service: load
    version: v1
  name: load
  namespace: default
  resourceVersion: "1306905"
  uid: a7bde4f3-9b74-4472-9191-e5d03c2c3929
spec:
  clusterIP: 10.100.81.242
  clusterIPs:
  - 10.100.81.242
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: workload
    version: v1
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
