config/sleep-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"sleep","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"sleep"}},"template":{"metadata":{"labels":{"app":"sleep"}},"spec":{"containers":[{"command":["/bin/sleep","infinity"],"image":"curlimages/curl","imagePullPolicy":"IfNotPresent","name":"sleep","volumeMounts":[{"mountPath":"/etc/sleep/tls","name":"secret-volume"}]}],"serviceAccountName":"sleep","terminationGracePeriodSeconds":0, [...]
  creationTimestamp: "2024-06-04T16:07:15Z"
  generation: 1
  name: sleep
  namespace: default
  resourceVersion: "1166609"
  uid: 05cf6661-858f-4018-9bb1-56f5160d1dd9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sleep
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sleep
    spec:
      containers:
      - command:
        - /bin/sleep
        - infinity
        image: curlimages/curl
        imagePullPolicy: IfNotPresent
        name: sleep
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: sleep
      serviceAccountName: sleep
      terminationGracePeriodSeconds: 0
      volumes:
      - name: secret-volume
        secret:
          defaultMode: 420
          optional: true
          secretName: sleep-secret
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-06-04T16:07:17Z"
    lastUpdateTime: "2024-06-04T16:07:17Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-06-04T16:07:15Z"
    lastUpdateTime: "2024-06-04T16:07:17Z"
    message: ReplicaSet "sleep-9454cc476" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
