config/sleep-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    istio.io/use-waypoint: static-waypoint
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"sleep","service":"sleep"},"name":"sleep","namespace":"default"},"spec":{"ports":[{"name":"http","port":80}],"selector":{"app":"sleep"}}}
  creationTimestamp: "2024-06-04T16:07:15Z"
  labels:
    app: sleep
    istio.io/use-waypoint: static-waypoint
    service: sleep
  name: sleep
  namespace: default
  resourceVersion: "1306964"
  uid: f8f95375-7da5-4c0d-94b1-71ef6bb05ec0
spec:
  clusterIP: 10.100.65.68
  clusterIPs:
  - 10.100.65.68
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sleep
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
