config/static-waypoint-gc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    ambient.istio.io/waypoint-inbound-binding: PROXY/15088
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1beta1","kind":"GatewayClass","metadata":{"annotations":{"ambient.istio.io/waypoint-inbound-binding":"PROXY/15088"},"name":"static-waypoint"},"spec":{"controllerName":"nobody.com/none-controller"}}
  creationTimestamp: "2024-06-04T16:51:06Z"
  generation: 1
  name: static-waypoint
  resourceVersion: "1175088"
  uid: 1be6f3f7-2e70-4e83-ac38-1129f2ebd6ce
spec:
  controllerName: nobody.com/none-controller
status:
  conditions:
  - lastTransitionTime: "1970-01-01T00:00:00Z"
    message: Waiting for controller
    reason: Waiting
    status: Unknown
    type: Accepted
