config/static-waypoint-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"static-waypoint","namespace":"default"},"spec":{"clusterIP":"10.100.128.128","ports":[{"name":"hbone","port":15008,"protocol":"TCP"}],"selector":{"app":"static-waypoint"}}}
  creationTimestamp: "2024-06-04T17:16:25Z"
  name: static-waypoint
  namespace: default
  resourceVersion: "1179997"
  uid: 17f85cc8-db03-4b25-ad94-cd95b5dca68a
spec:
  clusterIP: 10.100.128.128
  clusterIPs:
  - 10.100.128.128
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: hbone
    port: 15008
    protocol: TCP
    targetPort: 15008
  selector:
    app: static-waypoint
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
